[gd_scene load_steps=5 format=3 uid="uid://weapon_replacement_hud"]

[ext_resource type="Script" path="res://scripts/ui/weapon_replacement_hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_label"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)

[node name="WeaponReplacementHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="PromptPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="PromptPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PromptLabel" type="Label" parent="PromptPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_label")
text = "Replace weapon with: Rocket Launcher?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option1Label" type="Label" parent="PromptPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_label")
text = "[1] Replace Rocket Launcher (Slot 1)"
horizontal_alignment = 1

[node name="OptionSpaceLabel" type="Label" parent="PromptPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_label")
text = "[SPACE] Drop new weapon"
horizontal_alignment = 1

[node name="Option2Label" type="Label" parent="PromptPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_label")
text = "[2] Replace Mine Layer (Slot 2)"
horizontal_alignment = 1

